@@ -1,14 +1,15 @@
 Package: rbugs
 Title: Fusing R and OpenBugs
-Date: 2010-05-28
-Version: 0.4-1
+Date: 2010-06-09
+Version: 0.4-2
 Author: Jun Yan <jyan@stat.uconn.edu> and Marcos Prates
         <marcos.prates@uconn.edu>
 Description: Functions to prepare files needed for running BUGS in
         batch-mode, and running BUGS from R. Support for Linux and
         Windows systems with OpenBugs is emphasized.
+Suggests: coda (>= 0.13-5)
 Maintainer: Marcos Prates <marcos.prates@uconn.edu>
 License: GPL (>= 3.0)
 Repository: CRAN
-Date/Publication: 2010-05-29 08:02:09
-Packaged: 2010-05-28 18:06:36 UTC; marcosop
+Date/Publication: 2010-06-11 09:05:03
+Packaged: 2010-06-10 03:43:43 UTC; marcosop
