@@ -1,5 +1,6 @@
 export(rbugs, 
        genDataFile, genInitsFile, genBugsScript, 
-       runBugs, 
+       runBugs,
+       print.rbugs,
        getBugsOutput,
        format4Bugs)
