@@ -9,7 +9,7 @@ genBugsScript(paramSet, n.chains, n.iter, n.burnin, n.thin, dic,
               model.file, data.file, inits.files,
               workingDir=NULL, bugsWorkingDir=getwd(),
               script, debug = FALSE, useWine=FALSE,
-              linbugs=TRUE, Windows=TRUE, seed=31)
+              OpenBugs=TRUE, Windows=TRUE, seed=NULL)
 }
 %- maybe also 'usage' for other objects documented here.
 \arguments{
@@ -36,7 +36,7 @@ genBugsScript(paramSet, n.chains, n.iter, n.burnin, n.thin, dic,
   \item{debug}{ A logical value indicating whether or not closing the
     BUGS window after running the script.}
   \item{useWine}{ If TRUE, BUGS is used via wine.}
-  \item{linbugs}{ If TRUE, OpenBugs is used. } %- Modified by Marcos
+  \item{OpenBugs}{ If TRUE, OpenBugs is used. } %- Modified by Marcos
   \item{Windows}{ If TRUE, Windows plataform is used. } %- Modified by Marcos
   \item{seed}{ An integer of random number seed.} 
 }
